Add 4 mask collections with individual galleries and descriptions

--- a/index.html
+++ b/index.html
@@ -767,31 +767,155 @@
                     name: 'Masks',
                     tagline: 'Experimental Face Coverings',
                     date: 'Winter 2024',
-                    goal: 'This design focuses on minimalism and utility. The shoe is a single, continuous form...',
+                    goal: 'A collection of experimental face coverings exploring identity, protection, and artistic expression through wearable sculpture.',
                     role: [
-                        'Design Lead',
-                        'Function Analysis',
-                        'Material Selection',
-                        'Testing & Validation'
+                        'Lead Designer',
+                        '3D Modeling',
+                        'Material Research',
+                        'Prototype Development',
+                        'Concept Development'
                     ],
                     skills: [
-                        'Minimalist Design',
-                        'Functional Analysis',
-                        'Material Engineering',
-                        'User Testing',
-                        'Design Systems',
-                        'Quality Control'
+                        '3D Printing',
+                        'Generative Design',
+                        'CAD Modeling',
+                        'Material Science',
+                        'Rapid Prototyping',
+                        'Design Iteration',
+                        'Sculptural Design'
                     ],
-                    lessons: [
-                        'Simplicity requires more design discipline',
-                        'Function should drive form decisions',
-                        'User testing reveals hidden requirements'
-                    ],
-                    circleImage: 'shoeimages/TunsShoe Side View.png',
-                    mainImage: 'shoeimages/TunsShoe Side View.png',
+                    circleImage: 'maskimages/red mask (first mask) (1).webp',
+                    mainImage: 'maskimages/red mask (first mask) (1).webp',
                     thumbnails: [
-                        { src: 'shoeimages/TunsShoe Side View.png', alt: 'Side View' },
-                        { src: 'shoeimages/TunsShoe Front View.png', alt: 'Front View' }
+                        { src: 'maskimages/red mask (first mask) (1).webp', alt: 'Red Mask 1' },
+                        { src: 'maskimages/red mask (first mask) (2).webp', alt: 'Red Mask 2' },
+                        { src: 'maskimages/red mask (first mask) (3).webp', alt: 'Red Mask 3' },
+                        { src: 'maskimages/red mask (first mask) (4).webp', alt: 'Red Mask 4' },
+                        { src: 'maskimages/red mask (first mask) (5).webp', alt: 'Red Mask 5' }
+                    ],
+                    projects: [
+                        {
+                            id: 'red-mask',
+                            name: 'Red Mask Collection',
+                            tagline: 'First Experimental Mask',
+                            date: 'Fall 2024',
+                            goal: 'Exploring the intersection of protection and identity through bold, sculptural forms.',
+                            role: [
+                                'Lead Designer',
+                                '3D Modeling',
+                                'Material Selection',
+                                'Prototype Testing'
+                            ],
+                            skills: [
+                                '3D Printing',
+                                'Generative Design',
+                                'CAD Modeling',
+                                'Material Science',
+                                'Rapid Prototyping'
+                            ],
+                            description: 'The first in the mask series, exploring bold geometric forms and the relationship between protection and identity.',
+                            mainImage: 'maskimages/red mask (first mask) (1).webp',
+                            thumbnails: [
+                                { src: 'maskimages/red mask (first mask) (1).webp', alt: 'Red Mask 1' },
+                                { src: 'maskimages/red mask (first mask) (2).webp', alt: 'Red Mask 2' },
+                                { src: 'maskimages/red mask (first mask) (3).webp', alt: 'Red Mask 3' },
+                                { src: 'maskimages/red mask (first mask) (4).webp', alt: 'Red Mask 4' },
+                                { src: 'maskimages/red mask (first mask) (5).webp', alt: 'Red Mask 5' }
+                            ]
+                        },
+                        {
+                            id: 'chrome-mask',
+                            name: 'Chrome Mask Collection',
+                            tagline: 'Reflective Identity',
+                            date: 'Winter 2024',
+                            goal: 'Investigating the concept of reflection and distortion through metallic surfaces and organic forms.',
+                            role: [
+                                'Lead Designer',
+                                '3D Modeling',
+                                'Surface Treatment',
+                                'Photography Direction'
+                            ],
+                            skills: [
+                                '3D Printing',
+                                'Surface Finishing',
+                                'CAD Modeling',
+                                'Material Science',
+                                'Photography',
+                                'Lighting Design'
+                            ],
+                            description: 'A series exploring reflective surfaces and the distortion of identity through metallic finishes and organic shapes.',
+                            mainImage: 'maskimages/chrome masks for ok.webp',
+                            thumbnails: [
+                                { src: 'maskimages/chrome masks for ok.webp', alt: 'Chrome Mask Main' },
+                                { src: 'maskimages/chrome masks for ok (1).webp', alt: 'Chrome Mask 1' },
+                                { src: 'maskimages/chrome masks for ok (2).webp', alt: 'Chrome Mask 2' },
+                                { src: 'maskimages/chrome masks for ok (3).webp', alt: 'Chrome Mask 3' },
+                                { src: 'maskimages/chrome masks for ok (4).webp', alt: 'Chrome Mask 4' },
+                                { src: 'maskimages/chrome masks for ok (5).webp', alt: 'Chrome Mask 5' },
+                                { src: 'maskimages/chrome masks for ok (6).webp', alt: 'Chrome Mask 6' },
+                                { src: 'maskimages/chrome masks for ok (7).webp', alt: 'Chrome Mask 7' }
+                            ]
+                        },
+                        {
+                            id: 'hamsa-mask',
+                            name: 'Hamsa Mask Collection',
+                            tagline: 'Symbolic Protection',
+                            date: 'Spring 2025',
+                            goal: 'Integrating cultural symbolism with contemporary design through the protective Hamsa symbol.',
+                            role: [
+                                'Lead Designer',
+                                'Cultural Research',
+                                '3D Modeling',
+                                'Symbol Integration'
+                            ],
+                            skills: [
+                                '3D Printing',
+                                'Cultural Design',
+                                'CAD Modeling',
+                                'Symbolic Design',
+                                'Material Science',
+                                'Prototype Development'
+                            ],
+                            description: 'A collection that merges the protective symbolism of the Hamsa with modern sculptural forms and contemporary materials.',
+                            mainImage: 'maskimages/hamsa (1).webp',
+                            thumbnails: [
+                                { src: 'maskimages/hamsa (1).webp', alt: 'Hamsa Mask 1' },
+                                { src: 'maskimages/hamsa (2).webp', alt: 'Hamsa Mask 2' },
+                                { src: 'maskimages/hamsa (3).webp', alt: 'Hamsa Mask 3' },
+                                { src: 'maskimages/hamsa (4).webp', alt: 'Hamsa Mask 4' },
+                                { src: 'maskimages/hamsa (5).webp', alt: 'Hamsa Mask 5' },
+                                { src: 'maskimages/hamsa (6).webp', alt: 'Hamsa Mask 6' }
+                            ]
+                        },
+                        {
+                            id: 'blackeye-mask',
+                            name: 'Black Eye Mask Collection',
+                            tagline: 'Minimalist Expression',
+                            date: 'Summer 2025',
+                            goal: 'Exploring minimalism and negative space through simple, powerful forms.',
+                            role: [
+                                'Lead Designer',
+                                'Minimalist Design',
+                                '3D Modeling',
+                                'Form Simplification'
+                            ],
+                            skills: [
+                                '3D Printing',
+                                'Minimalist Design',
+                                'CAD Modeling',
+                                'Form Reduction',
+                                'Material Science',
+                                'Negative Space Design'
+                            ],
+                            description: 'A minimalist approach to mask design, focusing on essential forms and the power of negative space.',
+                            mainImage: 'maskimages/blackeye (1).webp',
+                            thumbnails: [
+                                { src: 'maskimages/blackeye (1).webp', alt: 'Black Eye Mask 1' },
+                                { src: 'maskimages/blackeye (2).webp', alt: 'Black Eye Mask 2' },
+                                { src: 'maskimages/blackeye (3).webp', alt: 'Black Eye Mask 3' },
+                                { src: 'maskimages/blackeye (4).webp', alt: 'Black Eye Mask 4' }
+                            ]
+                        }
                     ]
                 },
                 {
