--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             position: absolute;
             height: 2px;
             background: linear-gradient(90deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.1));
-            z-index: 1;
+            z-index: 0;
             pointer-events: none;
         }
         
@@ -308,7 +308,7 @@
             right: 0;
             bottom: 0;
             height: var(--marquee-h);
-            background: #F00000;
+            background: #A30000;
             color: #ffffff;
             border-top: 1px solid #e5e7eb;
             overflow: hidden;
@@ -354,7 +354,7 @@
         }
         
         .popup-content {
-            background: #F00000;
+            background: #A30000;
             padding: 2rem;
             border-radius: 1rem;
             max-width: 500px;
@@ -421,7 +421,7 @@
     <!-- Auto-Save Status Indicator -->
 
     <!-- Header Navigation -->
-    <header class="w-full p-6 sm:p-8 sticky top-0 z-50 bg-[#F00000] shadow-sm">
+    <header class="w-full p-6 sm:p-8 sticky top-0 z-50 bg-[#A30000] shadow-sm">
         <nav class="flex justify-between items-center max-w-7xl mx-auto">
             <div class="flex-1">
                 <a class="text-lg font-medium nav-link text-white" id="contact-popup-trigger">Reach out!</a>
