--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         *, h1, h2, h3, h4, h5, h6, p, span, div, a, button, input, textarea, label {
             font-family: 'Yeezy Tstar', sans-serif !important;
         }
-        main { padding-bottom: var(--marquee-h); }
+        main { 
+            padding-bottom: var(--marquee-h);
+            background-color: #F2F0EF;
+        }
         .nav-link {
             transition: color 0.3s ease;
             cursor: pointer;
@@ -71,6 +74,7 @@
             height: 100%;
             min-height: calc(100vh - 80px - var(--marquee-h));
             display: flex;
+            background-color: #F2F0EF;
             justify-content: center;
             align-items: center;
             transition: all 0.6s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -92,6 +96,7 @@
         }
         .page-content {
             display: none; /* Hide all pages by default */
+            background-color: #F2F0EF;
         }
         .page-content.active {
             display: block; /* Show the active page */
