Replace Instagram SVG icons with custom PNG icon
- Updated header Instagram icon to use custom 'instagram icon.png'
- Updated contact popup Instagram icon to use custom PNG
- Maintained same sizing (w-6 h-6) and hover effects
- Both icons now use the custom PNG file instead of SVG

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
             </div>
             <div class="flex-1 flex justify-end space-x-6">
                 <a href="https://www.instagram.com/ck.mdvs/" target="_blank" rel="noopener noreferrer" class="text-black hover:text-[#F2F0EF] transition-colors duration-300">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
+                    <img src="instagram icon.png" alt="Instagram" class="w-6 h-6">
                  </a>
             </div>
         </nav>
@@ -794,11 +794,7 @@
                                     </svg>
                                 </a>
                                 <a href="https://www.instagram.com/ck.mdvs/" target="_blank" rel="noopener noreferrer" class="w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center hover:bg-[#F2F0EF] hover:text-black transition-colors duration-300">
-                                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                                        <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-                                        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-                                        <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
-                                    </svg>
+                                    <img src="instagram icon.png" alt="Instagram" class="w-6 h-6">
                                 </a>
                             </div>
                         </div>
