Update all project content with new copy - detailed descriptions for footwear, accessories, masks, and about sections

--- a/index.html
+++ b/index.html
@@ -830,21 +830,25 @@
                     id: 'project1',
                     name: 'Footwear',
                     tagline: 'Experimental Shoe Design Collection',
-                    date: 'Spring 2025',
-                    goal: 'A collection of experimental footwear designs exploring innovative forms, materials, and manufacturing techniques.',
+                    date: 'January to May (5 months)',
+                    goal: 'A five-month collaborative project under the team name Sidian, composed of six artists exploring wearable sculpture. I led the modeling and printing process without prior experience in footwear fabrication, learning material tolerances, print ergonomics, and fit testing through trial and iteration. The collection of six experimental shoes concluded with a public showcase presented to over one hundred attendees.',
                     role: [
                         'Lead Designer',
-                        '3D Modeling',
+                        '3D Modeler',
                         'Material Research',
-                        'Prototype Development'
+                        'Prototype Development',
+                        'Communication',
+                        'Collaboration',
+                        'Creative Direction'
                     ],
                     skills: [
+                        '3D Modeling',
+                        'Material Research',
+                        'Prototype Development',
                         '3D Printing',
-                        'Generative Design',
-                        'CAD Modeling',
-                        'Material Science',
-                        'Rapid Prototyping',
-                        'Design Iteration'
+                        'Communication',
+                        'Collaboration',
+                        'Creative Direction'
                     ],
                     lessons: [
                         'Material selection critical for structural integrity',
@@ -863,7 +867,7 @@
                     projects: [
                         {
                             name: 'OK Shoes',
-                            description: 'Experimental red high-top design exploring sculptural forms and organic geometry.',
+                            description: 'A five-month collaborative project under the team name Sidian, composed of six artists exploring wearable sculpture. I led the modeling and printing process without prior experience in footwear fabrication, learning material tolerances, print ergonomics, and fit testing through trial and iteration. The collection of six experimental shoes concluded with a public showcase presented to over one hundred attendees.',
                             images: [
                                 { src: 'shoeimages/okshoes.webp', alt: 'Main View' },
                                 { src: 'shoeimages/okshoes (7).webp', alt: 'Side View' },
@@ -874,7 +878,7 @@
                         },
                         {
                             name: 'Heel Boot Collection',
-                            description: 'A series of experimental heel boot designs pushing the boundaries of traditional footwear construction.',
+                            description: 'An experimental pair of shoes designed to blur the line between function and illusion. Externally a boot, internally a heel, the structure forces the wearer into an unexpected gait and exposes the tension between comfort and appearance. Built as a personal exploration in form manipulation, digital sculpting, and ergonomics.',
                             images: [
                                 { src: 'shoeimages/heel boot (8).webp', alt: 'Main Design' },
                                 { src: 'shoeimages/heel boot (1).webp', alt: 'Alternative View' },
@@ -888,7 +892,7 @@
                         },
                         {
                             name: 'MyShoeBoot Series',
-                            description: 'Personal exploration of boot design combining functionality with avant-garde aesthetics.',
+                            description: 'My individual contribution to the OK Shoes showcase. A fully modeled and printed footwear piece that translated sculptural intent into wearable form. The process focused on balancing visual mass with structural comfort through multiple iterations that refined each version for stability, proportion, and material balance.',
                             images: [
                                 { src: 'shoeimages/MyShoeBoot Side View.webp', alt: 'Side View' },
                                 { src: 'shoeimages/MyShoeBoot Front  View.webp', alt: 'Front View' },
@@ -899,7 +903,7 @@
                         },
                         {
                             name: 'TunsShoe Collection',
-                            description: 'Collaborative footwear design focusing on minimalist forms and clean lines.',
+                            description: 'Another piece developed within the OK Shoes project. Built from the same generative and sculptural principles as MyShoeBoot but adapted for minimalist lines and subtler geometry. The process emphasized rapid iteration, structural consistency, and the integration of aesthetics with anatomical precision.',
                             images: [
                                 { src: 'shoeimages/TunsShoe Side View.webp', alt: 'Side View' },
                                 { src: 'shoeimages/TunsShoe Front View.webp', alt: 'Front View' },
@@ -914,24 +918,21 @@
                     id: 'project2',
                     name: 'Accessories',
                     tagline: 'Experimental Wearable Objects',
-                    date: 'Fall 2024',
+                    date: 'Ongoing',
                     goal: 'A collection of experimental accessories exploring the intersection of form, function, and personal expression through wearable design objects.',
                     role: [
-                        'Concept Development',
-                        '3D Modeling & Sculpting',
-                        'Material Exploration',
+                        'Designer',
+                        '3D Modeler',
                         'Visual Design',
-                        'Photography & Rendering'
+                        'Material Research',
+                        'Jewelry Design'
                     ],
                     skills: [
-                        '3D Sculpting',
-                        'Jewelry Design',
-                        'Concept Art',
-                        'Digital Rendering',
-                        'Form Exploration',
-                        'Visual Storytelling',
-                        'Photography',
-                        'Material Studies'
+                        '3D Modeling',
+                        'Rendering',
+                        'Visual Design',
+                        'Material Research',
+                        'Jewelry Design'
                     ],
                     lessons: [
                         'Wearable objects require intimate understanding of human form',
@@ -951,7 +952,7 @@
                     projects: [
                         {
                             name: 'Buldge Glasses',
-                            description: 'Experimental eyewear exploring organic forms and unconventional proportions. These glasses challenge traditional notions of functionality while maintaining wearability.',
+                            description: 'Experimental eyewear that explores organic form and proportion while maintaining wearability. The design uses subtle curvature and surface distortion to create visual movement across the face, emphasizing the tension between structure and fluidity.',
                             images: [
                                 { src: 'accessoryimages/buldgeglasses (1).webp', alt: 'Front View' },
                                 { src: 'accessoryimages/buldgeglasses (2).webp', alt: 'Side Profile' },
@@ -960,7 +961,7 @@
                         },
                         {
                             name: 'Golden Eye',
-                            description: 'A sculptural piece that blurs the line between jewelry and art object. The golden eye motif explores themes of perception and identity.',
+                            description: 'A sculptural object created as both jewelry and visual statement. The golden eye form studies perception and self-awareness through reflective geometry and minimal ornamentation. Designed to serve as both adornment and symbol.',
                             images: [
                                 { src: 'accessoryimages/golden eye (1).webp', alt: 'Main View' },
                                 { src: 'accessoryimages/golden eye (2).webp', alt: 'Detail' },
@@ -970,7 +971,7 @@
                         },
                         {
                             name: 'Hands Glasses',
-                            description: 'Conceptual eyewear featuring hand motifs that explore themes of touch, vision, and human connection through wearable design.',
+                            description: 'Conceptual eyewear that integrates hand-like structures to frame the face, exploring the relationship between touch and sight. This piece investigates intimacy through design, blending human anatomy with wearable abstraction.',
                             images: [
                                 { src: 'accessoryimages/hands glasses (1).webp', alt: 'Front View' },
                                 { src: 'accessoryimages/hands glasses (2).webp', alt: 'Side View' },
@@ -980,7 +981,7 @@
                         },
                         {
                             name: 'ID Chain',
-                            description: 'A comprehensive collection of chain designs exploring different textures, weights, and forms. Each piece represents a different aspect of personal identity.',
+                            description: 'A series of chain concepts exploring texture, rhythm, and identity through form variation. Each design communicates a distinct character through scale, weight, and repetition while remaining cohesive as a visual family.',
                             images: [
                                 { src: 'accessoryimages/idchain (1).webp', alt: 'Chain 1' },
                                 { src: 'accessoryimages/idchain (2).webp', alt: 'Chain 2' },
@@ -995,7 +996,7 @@
                         },
                         {
                             name: 'Liquidy Glasses',
-                            description: 'Fluid-inspired eyewear that captures the essence of movement and transformation. These glasses explore the relationship between solid form and liquid motion.',
+                            description: 'Eyewear inspired by the motion of liquid surfaces. The frames capture fluidity frozen in solid form, experimenting with reflection, balance, and transformation in both digital and physical space.',
                             images: [
                                 { src: 'accessoryimages/liquidy glasses (1).webp', alt: 'Main View' },
                                 { src: 'accessoryimages/liquidy glasses (2).webp', alt: 'Side View' },
@@ -1004,7 +1005,7 @@
                         },
                         {
                             name: 'Silver Necklace',
-                            description: 'Elegant silver necklace designs that balance minimalism with statement-making presence. Each piece explores different approaches to form and texture.',
+                            description: 'Minimal silver forms designed to merge elegance and presence. Each variation studies proportion, negative space, and subtle surface shifts that catch light differently across movement.',
                             images: [
                                 { src: 'accessoryimages/silvernecklace (1).webp', alt: 'Necklace 1' },
                                 { src: 'accessoryimages/silvernecklace (2).webp', alt: 'Necklace 2' },
@@ -1017,24 +1018,26 @@
                 {
                     id: 'project3',
                     name: 'Masks',
-                    tagline: 'Experimental Face Coverings',
-                    date: 'Winter 2024',
-                    goal: 'A collection of experimental face coverings exploring identity, protection, and artistic expression through wearable sculpture.',
+                    tagline: 'Identity & Protection Collection',
+                    date: 'Ongoing',
+                    goal: 'A collection of experimental mask designs exploring themes of identity, protection, and self-expression through sculptural wearable objects.',
                     role: [
                         'Lead Designer',
-                        '3D Modeling',
+                        '3D Modeler',
+                        'Visual Design',
                         'Material Research',
-                        'Prototype Development',
-                        'Concept Development'
+                        'Jewelry Design',
+                        'Collaboration',
+                        'Communication'
                     ],
                     skills: [
-                        '3D Printing',
-                        'Generative Design',
-                        'CAD Modeling',
-                        'Material Science',
-                        'Rapid Prototyping',
-                        'Design Iteration',
-                        'Sculptural Design'
+                        '3D Modeling',
+                        'Rendering',
+                        'Visual Design',
+                        'Material Research',
+                        'Jewelry Design',
+                        'Collaboration',
+                        'Communication'
                     ],
                     circleImage: 'maskimages/red mask (first mask) (1).webp',
                     mainImage: 'maskimages/red mask (first mask) (1).webp',
@@ -1051,7 +1054,7 @@
                             name: 'Red Mask Collection',
                             tagline: 'First Experimental Mask',
                             date: 'Fall 2024',
-                            goal: 'Exploring the intersection of protection and identity through bold, sculptural forms.',
+                            goal: 'The first mask in the ongoing exploration of identity and protection. Constructed through bold geometric volumes that frame the face as both sculpture and shield, the design questions how form mediates individuality and anonymity.',
                             role: [
                                 'Lead Designer',
                                 '3D Modeling',
@@ -1080,7 +1083,7 @@
                             name: 'Chrome Mask Collection',
                             tagline: 'Reflective Identity',
                             date: 'Winter 2024',
-                            goal: 'Investigating the concept of reflection and distortion through metallic surfaces and organic forms.',
+                            goal: 'A collaboration with a group of artists curating visual concepts for a magazine issue. Each mask was created to reflect their aesthetic while preserving my design language. The chrome finish embodies reflection and distortion as metaphors for mediated identity.',
                             role: [
                                 'Lead Designer',
                                 '3D Modeling',
@@ -1113,7 +1116,7 @@
                             name: 'Hamsa Mask Collection',
                             tagline: 'Symbolic Protection',
                             date: 'Spring 2025',
-                            goal: 'Integrating cultural symbolism with contemporary design through the protective Hamsa symbol.',
+                            goal: 'A collection merging cultural symbolism with contemporary sculptural design. The Hamsa motif is integrated into a modern face form, representing protection and balance through the dialogue between spiritual symbolism and industrial technique.',
                             role: [
                                 'Lead Designer',
                                 'Cultural Research',
@@ -1144,7 +1147,7 @@
                             name: 'Black Eye Mask Collection',
                             tagline: 'Minimalist Expression',
                             date: 'Summer 2025',
-                            goal: 'Exploring minimalism and negative space through simple, powerful forms.',
+                            goal: 'A study in minimalism and negative space. The Black Eye series strips away ornamentation to reveal how absence defines identity. Each variation highlights proportion and emptiness as central design tools.',
                             role: [
                                 'Lead Designer',
                                 'Minimalist Design',
@@ -1173,12 +1176,28 @@
                 {
                     id: 'about',
                     name: 'About Me',
-                    tagline: 'Personal Information',
-                    date: '',
-                    goal: 'Learn more about my background, skills, and expertise in footwear design and 3D art.',
-                    role: [],
-                    skills: [],
-                    lessons: [],
+                    tagline: 'Designer & 3D Artist',
+                    date: 'Ongoing',
+                    goal: 'I am a footwear designer and 3D artist whose work investigates the relationship between form, identity, and material. My practice merges traditional craftsmanship with experimental technology, using design as a way to translate human expression into physical structure.',
+                    role: [
+                        'Designer',
+                        '3D Artist',
+                        'Material Innovator',
+                        'Concept Developer'
+                    ],
+                    skills: [
+                        '3D Modeling and Rendering',
+                        'Generative Design',
+                        'Additive Manufacturing',
+                        'Footwear Design',
+                        'Material Innovation',
+                        'Concept Development'
+                    ],
+                    lessons: [
+                        'Design bridges art and functionality',
+                        'Technology amplifies creative expression',
+                        'Iteration leads to innovation'
+                    ],
                     circleImage: 'meimages/Mehead.webp',
                     mainImage: 'meimages/Mehead.webp',
                     thumbnails: [
