Update header text and Instagram icon to white with black hover effect

--- a/index.html
+++ b/index.html
@@ -592,13 +592,13 @@
     <header class="w-full p-6 sm:p-8 sticky top-0 z-50 bg-[#A30000] shadow-sm">
         <nav class="flex justify-between items-center max-w-7xl mx-auto">
             <div class="flex-1">
-                <a class="text-lg font-bold nav-link text-black" id="contact-popup-trigger">Reach out!</a>
+                <a class="text-lg font-bold nav-link text-white hover:text-black transition-colors duration-300" id="contact-popup-trigger">Reach out!</a>
             </div>
             <div class="flex-1 text-center">
-                <a class="text-3xl font-bold tracking-wider nav-link text-black" data-target="home">Clarence Keith</a>
+                <a class="text-3xl font-bold tracking-wider nav-link text-white hover:text-black transition-colors duration-300" data-target="home">Clarence Keith</a>
             </div>
             <div class="flex-1 flex justify-end space-x-6">
-                <a href="https://www.instagram.com/ck.mdvs/" target="_blank" rel="noopener noreferrer" class="text-black hover:text-[#F2F0EF] transition-colors duration-300">
+                <a href="https://www.instagram.com/ck.mdvs/" target="_blank" rel="noopener noreferrer" class="text-white hover:text-black transition-colors duration-300">
                     <img src="instagram icon.png" alt="Instagram" class="w-6 h-6">
                  </a>
             </div>
