--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         .connecting-line {
             position: absolute;
             height: 2px;
-            background: linear-gradient(90deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.1));
+            background: black;
             z-index: -1;
             pointer-events: none;
         }
