Separate Footwear collection description from OK Shoes project description

--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
                     name: 'Footwear',
                     tagline: 'Experimental Shoe Design Collection',
                     date: 'January to May (5 months)',
-                    goal: 'A five-month collaborative project under the team name Sidian, composed of six artists exploring wearable sculpture. I led the modeling and printing process without prior experience in footwear fabrication, learning material tolerances, print ergonomics, and fit testing through trial and iteration. The collection of six experimental shoes concluded with a public showcase presented to over one hundred attendees.',
+                    goal: 'A collection of experimental footwear designs exploring innovative forms, materials, and manufacturing techniques. These projects push the boundaries of traditional shoe design through 3D modeling, additive manufacturing, and sculptural approaches to wearable objects.',
                     role: [
                         'Lead Designer',
                         '3D Modeler',
